--- a/Myshop08/.gitignore
+++ b/Myshop08/.gitignore
@@ -97,7 +97,7 @@ local.properties
 # .idea/artifacts
 # .idea/compiler.xml
 # .idea/jarRepositories.xml
-# .idea/modules.xml
+.idea/modules.xml
 # .idea/*.iml
 # .idea/modules
 # *.iml
@@ -140,6 +140,4 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 #modules.xml
-.idea/
 *.iml
-modules.xml
