--- a/Myshop08/src/main/webapp/WEB-INF/web.xml
+++ b/Myshop08/src/main/webapp/WEB-INF/web.xml
@@ -74,11 +74,10 @@
 		      <param-value>
 				  /config/springMVC/common-servlet.xml,
 				  /config/springMVC/common-servlet-aspect.xml,
-
+				  /config/springMVC/common-servlet-rest.xml
 			  </param-value>
 		      <!-- Servlet Meta-data / Spring Meta-data 위치 분리함 -->
 		    </init-param>
-		    
 		    <load-on-startup>1</load-on-startup>
   </servlet>
   
